# bookscan_dropbox_sync

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
samples/: bookscan_list_sample.html  converted.html  converted_from_showbook.html  mypage-bookshelf_all_list-php_page_1.html  mypage-bookshelf_all_list-php_page_2.html  showbook_bid_6079373.html  showbook_bid_6403632.html  showbook_bid_6403637.html  showbook_sample.html
src/bds/: bookscan_client.py  cli.py  config.py  dropbox_client.py  failure_store.py  state_store.py  sync_planner.py  transfer.py
src/bds/util/: __init__.py  retry.py
tests/: test_bookscan_http.py  test_bookscan_parse.py  test_bookscan_showbook_parse.py  test_cli_exit_codes.py  test_cli_filters.py  test_cli_list.py  test_cli_since.py  test_cli_smoke.py  test_failure_store.py  test_rate_limit_config.py  test_retry_policy.py  test_sync_planner.py  test_transfer_and_state_sqlite.py  test_util.py  test_util_parse_timestamp.py  test_util_totp.py
