[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookscan-dropbox-sync"
version = "0.1.0"
description = "Sync Bookscan downloadable PDFs to Dropbox."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "iyoda" }]

dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.3",
  "dropbox>=12.0.2",
  "typer[all]>=0.12.5",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "mypy>=1.11.2",
  "vcrpy>=6.0.1",
  "types-requests>=2.32.0.20240914",
  "coverage[toml]>=7.6.1",
  "pre-commit>=3.8.0"
]

[project.scripts]
bds = "bds.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bds*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.ruff.lint.isort]
known-first-party = ["bds"]
combine-as-imports = true

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_optional = true
check_untyped_defs = true
ignore_missing_imports = true
follow_imports = "silent"
exclude = ["tests/.*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=bds --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["bds"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
